# dato

./: .gitmodules  404.html  Cargo.toml  Dockerfile.client  Dockerfile.validator  README.md  client-api.hurl  intro.html  launch.sh  print.html  registry-20.txt  registry-200.txt  registry-3.txt  registry-50.txt  searchindex.js  searchindex.json
book/: README.md  book.toml
book/src/: intro.md  links.md
demo/: registry-1k.txt
examples/: cr_feed.rs
infra/: docker-compose.yml
smart-contracts/src/: Registry.sol
smart-contracts/test/: Registry.t.sol
src/: common.rs  lib.rs
src/bindings/: mod.rs
src/client/: api.rs  client.rs  mod.rs  spec.rs
src/primitives/: bls.rs  mod.rs
src/registry/: contract.rs  filesystem.rs  mod.rs
src/validator/: mod.rs  spec.rs  store.rs
tests/: hurl.rs  mod.rs  utils.rs
